# georesolver

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  debugging.py  dockerfile  install.sh  pyproject.toml
.github/workflows/: tests.yaml
andre/: initialization.py
andre/clickhouse/: settings.py
andre/common/: credentials.py  files_utils.py  ip_addresses_utils.py  module_settings.py  settings.py
andre/ripe_atlas/: settings.py
common/: clickhouse.py  files_utils.py  geoloc.py  ip_addresses_utils.py  module_settings.py  settings.py
configuration/: install.sh  installer.py  upload_to_ftp.py
configuration/users.d/: admin.xml  disable-default.xml
dockerfiles/: ecs-mapping-agent.dockerfile
geogiant/: distributed_ecs_mapping.py  distributed_end_to_end_ecs_mapping.py  distributed_router_ecs_mapping.py  distributed_scores.py  ecs_mapping.py  ecs_mapping_init.py  end_to_end_ecs_mapping.py  filter_vps.py  hostname_init.py  init.py  main.py  ripe_init.py  ripe_validation_ping.py  ripe_validation_ping_packet_number.py  ripe_validation_traceroute.py  routers_2ms.py  scheduler.py  scores.py
geogiant/agent/: __init__.py  agent.py  ecs_mapping_init.py  ecs_process.py  insert_process.py  ping_process.py  ripe_init.py  score_process.py
geogiant/analysis/: cdn_analysis.ipynb  cluster_evaluation.ipynb  cluster_evaluation.py  compute_scores.py  dns_mapping_eval.py  ecs_dns_fct_probing_budget.ipynb  ecs_dns_fct_probing_budget.py  evaluation.ipynb  no_ping_geoloc.py  no_ping_geolocation.py  no_ping_geolocation_old.py  plot.py  routers_2ms_evaluation.ipynb  routers_2ms_evaluation.py  score_evaluation.py  shortest_ping_evaluation.py  utils.py  vp_selection_eval.ipynb  wrongful_geoloc.ipynb
geogiant/clickhouse/: __init__.py  clickhouse.py  create_tables.py  dns_score.py  get.py  insert.py  main.py  queries.py  query.py  ripe_traceroute_parsing.py  tables.py
geogiant/common/: docker_utils.py  files_utils.py  geoloc.py  ip_addresses_utils.py  plot.py  queries.py  settings.py  ssh_utils.py  utils.py
geogiant/distributed_code/: distributed_ecs_mapping.py  distributed_end_to_end_ecs_mapping.py  dockerfile  dockerfile_score
geogiant/ecs_vp_selection/: compute_scores.py  demo.py  hostname_selection.py  multi_cdn_scores.py  query.py  scores.py  single_org_scores.py  utils.py
geogiant/evaluation/: cdn_evaluation.ipynb  cluster_evaluation.ipynb  correlation_evaluation.py  cost_evaluation.py  datasets_evaluation.ipynb  debubbing.py  ecs_geoloc_eval.py  ecs_geoloc_utils.py  ecs_persistency.py  end_to_end_evaluation.py  plot.py  (+45 more)
georesolver/: georesolver.py  main.py  scheduler.py
ripe_atlas/: insert_results.py  main.py  ripe_atlas_module.py  settings.py
zdns/: insert_results.py  main.py  settings.py  zdns_module.py
zmap/: settings.py
(+151 files in other folders)
