[tool.poetry]
name = "georesolver"
version = "0.1.0"
description = "Internet scale IP address geolocation tool"
authors = ["hrimlinger <hugo.rimlinger@sorbonne-universite.fr>"]
readme = "README.md"
packages = [
    {include = "georesolver"},
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.2.0"
ip_address = "^1.0.22"
tqdm = "^4.66.0"
urllib3 = "1.26.9"
pydantic-settings = "^2.0.3"
python-dotenv = "^0.21.0"
loguru = "^0.7.1"
ipwhois = "^1.1.0"
pre-commit = "3.6.0"
isort = "5.13.1"
autoflake = "1.4"
numpy = "^1.25.0"
pyasn = "^1.6.0"
httpx = "^0.23.0"
pych_client = "^0.3.0"
python-dateutil = "^2.8.1"
matplotlib = "^3.7.0"
typer = "^0.8.0"
fabric = "^3.2.0"
folium = "0.0.0"
shapely = "^2.0.0"
sklearn = "0.0"
pandas = "^2.0.0"
geoip2 = "^4.7.0"
clickhouse_driver = "^0.2.0" 


[tool.poetry.group.dev.dependencies]
black = "23.12"
flake8 = "^5.0.4"
isort = "^5.10.1"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
